{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 84,
  "lineage": "d34a670f-02e5-5247-ddfe-b0761c452d8c",
  "resources": [
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/publicIPAddresses/lb-pulic-ip"
              }
            ],
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/loadBalancers/TestLoadBalancer",
            "location": "australiaeast",
            "name": "TestLoadBalancer",
            "resource_group_name": "webApp-terraform",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.net.azurerm_public_ip.to_front_lb"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "for_websits",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/loadBalancers/TestLoadBalancer",
            "name": "BackEndAddressPool",
            "resource_group_name": "webApp-terraform"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.net.azurerm_lb.frontend",
            "module.net.azurerm_public_ip.to_front_lb"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "ssh_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/probes/ssh-running-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/loadBalancers/TestLoadBalancer",
            "name": "ssh-running-probe",
            "number_of_probes": 2,
            "port": 22,
            "protocol": "Tcp",
            "resource_group_name": "webApp-terraform"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.net.azurerm_lb.frontend",
            "module.net.azurerm_public_ip.to_front_lb"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/probes/entree-running-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/loadBalancers/TestLoadBalancer",
            "name": "entree-running-probe",
            "number_of_probes": 2,
            "port": 8080,
            "protocol": "Tcp",
            "resource_group_name": "webApp-terraform"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.net.azurerm_lb.frontend",
            "module.net.azurerm_public_ip.to_front_lb"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "port_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/backendAddressPools/BackEndAddressPool",
            "backend_port": 22,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 22,
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/loadBalancingRules/SSH",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/loadBalancers/TestLoadBalancer",
            "name": "SSH",
            "protocol": "Tcp",
            "resource_group_name": "webApp-terraform"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.net.azurerm_lb.frontend",
            "module.net.azurerm_lb_backend_address_pool.for_websits",
            "module.net.azurerm_public_ip.to_front_lb"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "port_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/backendAddressPools/BackEndAddressPool",
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 8080,
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/loadBalancingRules/LBRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/loadBalancers/TestLoadBalancer",
            "name": "LBRule",
            "protocol": "Tcp",
            "resource_group_name": "webApp-terraform"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.net.azurerm_lb.frontend",
            "module.net.azurerm_lb_backend_address_pool.for_websits",
            "module.net.azurerm_public_ip.to_front_lb"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/networkInterfaces/database_VM_NIC",
            "internal_domain_name_suffix": "2mcnl14aiufufduo5ajusug2ng.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal_database",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/virtualNetworks/VNet/subnets/private-sub"
              }
            ],
            "location": "australiaeast",
            "name": "database_VM_NIC",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "webApp-terraform"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.net.azurerm_subnet.private",
            "module.net.azurerm_virtual_network.VNet"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/networkInterfaces/VM_NIC_0",
            "internal_domain_name_suffix": "2mcnl14aiufufduo5ajusug2ng.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal_0",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/publicIPAddresses/web-0",
                "subnet_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/virtualNetworks/VNet/subnets/pub-sub"
              }
            ],
            "location": "australiaeast",
            "name": "VM_NIC_0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "webApp-terraform"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.net.azurerm_public_ip.to_web",
            "module.net.azurerm_subnet.public",
            "module.net.azurerm_virtual_network.VNet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/networkInterfaces/VM_NIC_1",
            "internal_domain_name_suffix": "2mcnl14aiufufduo5ajusug2ng.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal_1",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/publicIPAddresses/web-1",
                "subnet_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/virtualNetworks/VNet/subnets/pub-sub"
              }
            ],
            "location": "australiaeast",
            "name": "VM_NIC_1",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "webApp-terraform"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.net.azurerm_public_ip.to_web",
            "module.net.azurerm_subnet.public",
            "module.net.azurerm_virtual_network.VNet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/networkInterfaces/VM_NIC_2",
            "internal_domain_name_suffix": "2mcnl14aiufufduo5ajusug2ng.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal_2",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/publicIPAddresses/web-2",
                "subnet_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/virtualNetworks/VNet/subnets/pub-sub"
              }
            ],
            "location": "australiaeast",
            "name": "VM_NIC_2",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "webApp-terraform"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.net.azurerm_public_ip.to_web",
            "module.net.azurerm_subnet.public",
            "module.net.azurerm_virtual_network.VNet"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "database_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-public",
            "location": "australiaeast",
            "name": "nsg-public",
            "resource_group_name": "webApp-terraform",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "postgres",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public_Access",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-public",
            "location": "australiaeast",
            "name": "nsg-public",
            "resource_group_name": "webApp-terraform",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "port_22",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "port_8080",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "to_front_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/publicIPAddresses/lb-pulic-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.28.192.22",
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "lb-pulic-ip",
            "resource_group_name": "webApp-terraform",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "to_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/publicIPAddresses/web-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.28.192.32",
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "web-0",
            "resource_group_name": "webApp-terraform",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/publicIPAddresses/web-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.28.192.40",
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "web-1",
            "resource_group_name": "webApp-terraform",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/publicIPAddresses/web-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.28.192.48",
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "web-2",
            "resource_group_name": "webApp-terraform",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/virtualNetworks/VNet/subnets/private-sub",
            "name": "private-sub",
            "resource_group_name": "webApp-terraform",
            "virtual_network_name": "VNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.net.azurerm_virtual_network.VNet"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/virtualNetworks/VNet/subnets/pub-sub",
            "name": "pub-sub",
            "resource_group_name": "webApp-terraform",
            "virtual_network_name": "VNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.net.azurerm_virtual_network.VNet"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "to_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/virtualNetworks/VNet/subnets/private-sub",
            "network_security_group_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-public",
            "subnet_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/virtualNetworks/VNet/subnets/private-sub"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.net.azurerm_network_security_group.database_access",
            "module.net.azurerm_subnet.private",
            "module.net.azurerm_virtual_network.VNet"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "to_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/virtualNetworks/VNet/subnets/pub-sub",
            "network_security_group_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-public",
            "subnet_id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/virtualNetworks/VNet/subnets/pub-sub"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.net.azurerm_network_security_group.public_Access",
            "module.net.azurerm_subnet.public",
            "module.net.azurerm_virtual_network.VNet"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VNet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "efd504e3-45c0-420b-8e8e-f8134950dc6e",
            "id": "/subscriptions/4d83e4d2-c46b-49fa-b1d9-14d62c25e606/resourceGroups/webApp-terraform/providers/Microsoft.Network/virtualNetworks/VNet",
            "location": "australiaeast",
            "name": "VNet",
            "resource_group_name": "webApp-terraform",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}